--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="analyze">Analyze</string>
     <string name="result">Hasil Analisis</string>
     <string name="empty_image_warning">silakan pilih gambar terlebih dahulu</string>
+    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
 </resources>
